<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment">

    <include layout="@layout/main_toolbar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/more"
                android:layout_marginTop="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/more"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

            <TextView
                android:id="@+id/txt"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/more"
                android:layout_alignStart="@+id/more"
                android:fontFamily="@font/brosh_k"
                android:text="@string/chane_password"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/old_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt"
                android:layout_marginStart="20dp"
                android:background="@drawable/fileds_background"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/old_password"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/old_password"
                android:layout_alignStart="@+id/old_password"
                android:layout_alignEnd="@+id/old_password"
                android:layout_marginTop="10dp"
                android:background="@drawable/fileds_background"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/new_password"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/re_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/new_password"
                android:layout_alignStart="@+id/new_password"
                android:layout_alignEnd="@+id/new_password"
                android:layout_marginTop="10dp"
                android:background="@drawable/fileds_background"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/re_password"
                android:padding="5dp"
                android:textColorHint="@color/purple_500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/re_password"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/brosh_k"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_language"
                android:layout_alignStart="@+id/txt_language"
                android:backgroundTint="@color/white"
                android:text="@string/en"
                android:textColor="@color/purple_500" />

            <Button
                android:id="@+id/ar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_language"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/en"
                android:backgroundTint="@color/white"
                android:text="@string/ar"
                android:textColor="@color/purple_500" />

            <TextView
                android:id="@+id/txt_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/en"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/brosh_k"
                android:text="@string/rate_us"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_rate"
                android:layout_alignStart="@+id/txt_rate"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/star" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/brosh_k"
                android:text="@string/feedback"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/feedback"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/txt_feedback"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/fileds_background"
                android:fontFamily="@font/brosh_k"
                android:gravity="top"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/feedback"
                android:layout_alignStart="@+id/feedback"
                android:layout_alignEnd="@+id/feedback"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="#03A9F4"
                android:text="@string/send"
                android:textColor="@color/white" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>