<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ProfileFragment">

    <include layout="@layout/main_toolbar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/user"
                android:id="@+id/profile_img"
                app:civ_border_width="2dp"
                android:layout_centerHorizontal="true"
                android:layout_width="150dp"
                android:layout_height="150dp"/>

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_img"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:text="@string/personal_information"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/fullname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_7"
                android:drawableEnd="@drawable/drawable_end"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullname"
                android:layout_alignStart="@+id/fullname"
                android:layout_alignEnd="@+id/fullname"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_2"
                android:drawableEnd="@drawable/drawable_end"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_alignStart="@+id/username"
                android:layout_alignEnd="@+id/username"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_4"
                android:drawableEnd="@drawable/drawable_end"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_alignStart="@+id/email"
                android:layout_alignEnd="@+id/email"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_5"
                android:drawableEnd="@drawable/drawable_end"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/date_of_birth"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number"
                android:layout_alignStart="@+id/phone_number"
                android:layout_alignEnd="@+id/phone_number"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_6"
                android:drawableEnd="@drawable/drawable_end"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/date_of_birth"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColorHint="@color/black" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_of_birth"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_edit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/exit" />

                <TextView
                    android:id="@+id/edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brosh_k"
                    android:gravity="center"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/inspiration_quote_for_today"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/fileds_background"
                android:fontFamily="@font/brosh_k"
                android:padding="20dp"
                android:text="@string/word_harder_proud_later"
                android:textColor="@color/purple_500"
                android:textSize="20sp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>