<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.RegisterActivity">

    <include layout="@layout/main_toolbar" android:id="@+id/toolbar"/>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:text="@string/personal_information"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="@+id/profile_img"
                app:layout_constraintStart_toStartOf="@+id/profile_img"
                app:layout_constraintTop_toBottomOf="@+id/profile_img" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="658dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/user"
                app:civ_border_color="@color/white"
                app:civ_border_width="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline1"
                android:src="@drawable/login"
                android:layout_width="75dp"
                android:layout_height="75dp"/>

            <EditText
                android:textColorHint="@color/black"
                android:drawableEnd="@drawable/drawable_end"
                android:id="@+id/fullname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_7"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="5dp"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/txt1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:textColorHint="@color/black"
                android:drawableEnd="@drawable/drawable_end"
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_2"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/fullname"
                app:layout_constraintStart_toStartOf="@+id/fullname"
                app:layout_constraintTop_toBottomOf="@+id/fullname" />

            <EditText
                android:textColorHint="@color/black"
                android:drawableEnd="@drawable/drawable_end"
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_4"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/username"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <EditText
                android:textColorHint="@color/black"
                android:drawableEnd="@drawable/drawable_end"
                android:id="@+id/phone_number"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_5"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:textColorHint="@color/black"
                android:drawableEnd="@drawable/drawable_end"
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_3"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/phone_number"
                app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            <EditText
                android:textColorHint="@color/black"
                android:drawableEnd="@drawable/drawable_end"
                android:id="@+id/date_of_birth"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fileds_background"
                android:drawableStart="@drawable/ldpi_6"
                android:fontFamily="@font/brosh_k"
                android:gravity="center"
                android:hint="@string/date_of_birth"
                android:inputType="number"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>